--- a/src/app/public/public.component.css
+++ b/src/app/public/public.component.css
@@ -27,6 +27,9 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14px;
   padding: 0;
   color: rgba(255, 255, 255, 0.8);
+  /* top: 0;
+  position: fixed; 
+  width: 100%;  */
 }
 
 #topbar .cta a {
@@ -55,6 +58,9 @@ h1, h2, h3, h4, h5, h6 {
   transition: all 0.5s;
   padding: 10px 0;
   background: #fff;
+
+  /* position: fixed;
+  width: 100%; */
 }
 
 #header.header-scrolled {
