--- a/src/app/restrict/expense/add-expenses/add-short-expense/add-short-expense.component.html
+++ b/src/app/restrict/expense/add-expenses/add-short-expense/add-short-expense.component.html
@@ -23,15 +23,15 @@
             <div class="col-sm-6">
                 <label for="expenseDate" class="control-label">Data da despesa:</label>
                 <input required id="expenseDate" name="expenseDate" type="text" class="form-control" 
-                    [(ngModel)]="expense.expenseDate"
-                    (ngModelChange)="manageDates($event)" bsDatepicker [bsConfig]="bsConfig">
+                    [(ngModel)]="expense.expenseDate" 
+                    (ngModelChange)="manageDates()" bsDatepicker [bsConfig]="bsConfig">
             </div>
             <!-- limit date  -->
             <div class="col-sm-6">
-                <label for="limit">Data limite do pagamento:</label>
-                <input required id="limit" name="limit" type="text" class="form-control" 
+                <label for="paymentDate">Data limite do pagamento:</label>
+                <input required id="paymentDate" name="paymentDate" type="text" class="form-control" 
                     [(ngModel)]="expense.paymentDate"
-                    (ngModelChange)="manageDates($event)" bsDatepicker [bsConfig]="bsConfig">
+                    (ngModelChange)="manageDates()" bsDatepicker [bsConfig]="bsConfig">
             </div>
         </div>
         <br>
@@ -71,14 +71,20 @@
 
         <div class="row">
             <!-- cost value  -->
-            <div class="col-sm-5">
+            <div class="col-sm-4">
                 <label for="cost">Custo da despesa:</label>
                 <input required id="cost" name="cost" type="number" class="form-control" 
                 [(ngModel)]="expense.total">
             </div>
+            <!-- first time payed value  -->
+            <div class="col-sm-4">
+                <label for="firstTimePayed">Valor pago no ato da compra:</label>
+                <input required id="firstTimePayed" name="firstTimePayed" type="number" class="form-control" 
+                [(ngModel)]="beginPayment" (blur)="managePayment()">
+            </div>
             <!--How many is it missing to end of payment-->
-            <div class="col-sm-5">
-                <label for="difference">Quanto flata para estar pago:</label>
+            <div class="col-sm-4">
+                <label for="difference">Quanto falta para estar pago:</label>
                 <input required id="difference" name="difference" type="number" class="form-control" 
                     [(ngModel)]="calculateDifference" readonly>
             </div>
@@ -86,10 +92,8 @@
     </div>
     <br>
     <br>
-
-
     <!-- render items -->
-    <div>
+    <div *ngIf="hasRender">
         <hr>
         <h4 class="mb-2 text-blue">Items da prestação</h4>
         <br>
@@ -103,7 +107,7 @@
                     <label for="itemsMonth">Mês:</label>
                     <select required id="itemsMonth" name="itemsMonth{{i}}" class="form-control ml-1" 
                         [(ngModel)]="dataArray[i].month">
-                        <option *ngFor="let month of monthsService.months"> {{ month }} </option>
+                        <option *ngFor="let month of dateService.months"> {{ month }} </option>
                     </select>
                 </div>
                 <div class="col-sm-4">
