--- a/src/app/restrict/expense/add-expenses/add-variable-expense/add-variable-expense.component.html
+++ b/src/app/restrict/expense/add-expenses/add-variable-expense/add-variable-expense.component.html
@@ -1,6 +1,6 @@
 <!--add variable expense-->
 <div class="container">
-  <h1 class="text-blue">{{ expenseType.name }}</h1>
+  <h1 class="text-blue"> Inserir - {{ expenseType.name }}</h1>
   <div class="expense-description"> {{ expenseType.description }} </div>
 </div>
 <br>
@@ -43,7 +43,7 @@
       <div class="col-sm-6">
         <label [attr.for]="'itemName'+i" class="control-label">Nome do item:</label>
         <input required [id]="'itemName'+i" name="itemName{{i}}" type="text" class="form-control"
-          [(ngModel)]="obj.itemName" #item="ngModel">
+          [(ngModel)]="obj.name" #item="ngModel">
         <span class="help-block" *ngIf="item.invalid && item.touched"> O nome do item é obrigatório</span>
       </div>
       <!--item description-->
@@ -59,7 +59,7 @@
       <div class="col-sm-6">
         <label for="value" class="control-label">Valor:</label>
         <input required id="value" name="value{{i}}" type="number" min="0" class="form-control"
-          [(ngModel)]="obj.valueNumber" #val="ngModel" (blur)="valueSum()">
+          [(ngModel)]="obj.value" #val="ngModel" (blur)="valueSum()">
         <span class="help-block" *ngIf="val.invalid && val.touched"> O valor do item é obrigatório </span>
         <br>
       </div>
