--- a/src/app/restrict/expense/update-expense/update-fixed-expense/update-fixed-expense.component.html
+++ b/src/app/restrict/expense/update-expense/update-fixed-expense/update-fixed-expense.component.html
@@ -1,88 +1,92 @@
-<div class="d-sm-flex align-items-center justify-content-between mb-4" >
-    <h1 class="h3 mb-0 text-blue"> Alterar -  {{expenseType.name }} </h1>
+<!--add fixed expense-->
+<div class="container">
+    <h1 class="text-blue"> Alterar - {{ expenseType.name }}</h1>
+    <div class="expense-description"> {{ expenseType.description }} </div>
 </div>
-
-<form #itemForm="ngForm" name="form" ngSubmit="onSubmit()" >
-    <div class="container-fluid">
+<br>
+<!--form expenses-->
+<form (ngSubmit)="onSubmit()" #form="ngForm">
+  <div class="container-fluid">
       <div class="row">
-          <div class="col-sm-6" [class.has-error]="name.invalid && name.touched" [class.has-success]="name.valid">
-              <label [attr.for]="name" class="control-label">Nome da despesa:</label>
-              <input required [id]="name" name="expenseName" type="text" class="form-control ml-1" 
-              [(ngModel)]="expense.expenseName" #name="ngModel" >
-              <span class="help-block" *ngIf="name.invalid && name.touched"> O nome da despesa é obrigatório</span>
+          <!-- expense name -->
+          <div class="col-sm-6">
+              <label for="name">Nome da despesa:</label>
+              <input required id="name" name="name" type="text" class="form-control ml-1"
+                  [(ngModel)]="expense.expenseName" #name="ngModel">
+              <span class="help-block" *ngIf="!name.valid && name.touched"> O nome da despesa é obrigatório</span>
+          </div>
+          <!--expense date-->
+          <div class="col-sm-6">
+              <label for="date" class="control-label">Data da despesa:</label>
+              <input required id="date" name="date" type="text" class="form-control" 
+                  [(ngModel)]="expense.expenseDate" bsDatepicker [bsConfig]="bsConfig">
           </div>
       </div>
       <br>
-      <!--expense date-->
-      <!-- <div class="col-sm-6" >
-        <label>Data da despesa:</label>
-        <input required name="expenseDate" type="text" class="form-control ml-1" 
-        [(ngModel)]="expense.expenseDate" bsDatepicker [bsConfig]="bsConfig"
-        [bsValue]="bsDate">
-        <input type="text" class="form-control" #dp="bsDatepicker" bsDatepicker
-        #datepickerDMY="bsDatepicker" [bsValue]="bsValue"
-        formControlName="dateDMY" [bsConfig]="{ dateInputFormat: 'DD-MM-YYYY' }">
-    </div> -->
+      <label for="month">Referente a:</label>
       <div class="row">
-          <div class="col-sm-6" >
-            <label>Data da despesa:</label>
-            <input required name="expenseDate" type="text" class="form-control ml-1" 
-                [(ngModel)]="expense.expenseDate" bsDatepicker [bsConfig]="bsConfig" >
-        </div>
-          <div class="col-sm-6" >
-            <label for="currency" class="control-label">Moeda:</label>
-            <select required id="currency" name="currency" class="form-control ml-1" 
-                [(ngModel)]="expense.currency">
-                    <option value="0">{{ expense.currency }}</option>
-                    <option *ngFor="let currency of currencies"[value]="currency"> {{currency}} </option>
-            </select>
-        </div>
-      </div>
-      <br>
-      <p>Referente a:</p>
-      <div class="row">
+          <!--month reference -->
           <div class="col-sm-6">
-              <select name="expenseMonth" class="form-control ml-1" [(ngModel)]="expense.month">
-                  <option value="0">{{ expense.month }}</option>
-                  <option>Janeiro</option>
-                  <option>Fevereiro</option>
-                  <option>Março</option>
-                  <option>Abril</option>
-                  <option>Maio</option>
-                  <option>Junho</option>
-                  <option>Julho</option>
-                  <option>Agosto</option>
-                  <option>Setembro</option>
-                  <option>Outubro</option>
-                  <option>Novembro</option>
-                  <option>Dezembro</option>
+              <select id="month" name="month" class="form-control ml-1" [(ngModel)]="expense.month">
+                  <option *ngFor="let month of months"> {{ month }} </option>
               </select>
           </div>
+          <!--year reference-->
           <div class="col-sm-6">
-              <input name="year" type="text" class="form-control ml-1" [(ngModel)]="expense.year">
+              <select id="year" name="year" class="form-control ml-1" [(ngModel)]="expense.year">
+                  <option *ngFor="let year of years" [value]="year"> {{ year }} </option>
+              </select>
           </div>
       </div>
       <br>
+      <!-- comments -->
       <div class="row">
           <div class="col-sm-12">
               <label>Observações:</label>
-              <textarea name="expenseDescription" type="text" rows="2" class="form-control ml-1" 
-                [(ngModel)]="expense.comments"></textarea>
+              <textarea name="expenseName" type="text" rows="2" class="form-control ml-1"
+                  [(ngModel)]="expense.comments"></textarea>
           </div>
       </div>
       <br>
+      <!--file chooser-->
+      <div class="row">
+          <div class="col-sm-12">
+              <button type="button" class="btn btn-secondary" name="add" *ngIf="!toggle"
+                  (click)="getOpenFileChooser()">Adicionar ficheiro</button>
+              <button type="button" class="btn btn-secondary" name="close" *ngIf="toggle" 
+                  (click)="getOpenFileChooser()">Fechar</button>
+          </div>
+      </div>
+      <br>
+      <div class="row" *ngIf="toggle">
+          <div class=" col-sm-12 input-group">
+              <div class="input-group-prepend">
+                  <span class="input-group-text" id="fileAddon">Upload</span>
+              </div>
+              <div class="custom-file">
+                  <input type="file" class="custom-file-input" id="inputFile" aria-describedby="fileAddon">
+                  <label class="custom-file-label" for="inputFile">Escolher ficheiro</label>
+              </div>
+          </div>
+      </div>
+      <br>
+      <!--total value-->
       <div class="row">
           <div class="col-sm-6">
-              <label>Valor da despesa:</label>
-              <input required type="number" name="value" class="form-control ml-1" 
-               [(ngModel)]="expense.total">
+              <label for="total">Custo total:</label>
+              <input required id="total" type="Number" min="0" name="total" class="form-control ml-1"
+                  [(ngModel)]="expense.total" #total="ngModel">
           </div>
+          <span class="help-block" *ngIf="!total.valid && total.touched"> O total da despesa é obrigatório</span>
       </div>
       <br>
-     <div class="col-sm-6">
-        <button class="btn btn-primary" type="submit" [disabled]="itemForm.invalid" (click)="onSubmit()">Submeter</button>
-    </div>
+      <!--submit-->
+      <div class="row">
+          <div class="col-sm-6">
+              <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Submeter</button>
+          </div>
+      </div>
   </div>
-  <br><br><br><br>
-    
+  <br>
+  <br>
 </form>
