--- a/src/app/public/faq/faq.component.css
+++ b/src/app/public/faq/faq.component.css
@@ -340,10 +340,6 @@ section {
   overflow: hidden;
 }
 
-/* .section-bg {
-  background-color: #ebf3f9;
-} */
-
 .section-title {
   text-align: center;
   padding-bottom: 30px;
@@ -351,11 +347,11 @@ section {
 
 .section-title h2 {
   font-size: 32px;
-  font-weight: 500;
+  font-weight: 600;
   margin-bottom: 20px;
   padding-bottom: 0;
   font-family: "Poppins", sans-serif;
-  color: #635551;
+  color: #3366ff;
 }
 
 .section-title p {
@@ -437,6 +433,7 @@ section {
 /*--------------------------------------------------------------
 # F.A.Q
 --------------------------------------------------------------*/
+
 .faq .faq-list {
   padding: 0 100px;
 }
