--- a/src/app/public/services/services.component.css
+++ b/src/app/public/services/services.component.css
@@ -349,11 +349,11 @@ section {
 
 .section-title h2 {
   font-size: 32px;
-  font-weight: 500;
+  font-weight: 600;
   margin-bottom: 20px;
   padding-bottom: 0;
   font-family: "Poppins", sans-serif;
-  color: #635551;
+  color: #3366ff;
 }
 
 .section-title p {
