--- a/src/app/public/about/about.component.html
+++ b/src/app/public/about/about.component.html
@@ -1,27 +1,34 @@
 <main id="main">
 <section id="about" class="about">
       <div class="container">
-        <br><br><br>
         <div class="row">
-          <div class="col-xl-5 col-lg-6 video-box d-flex justify-content-center align-items-stretch" data-aos="fade-right">
+          <div class="col-xl-5 col-lg-6 side-image" >
           </div>
-
-          <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
-            <br><br><br>
-            <h2 data-aos="fade-up">Sobre a ET-Costs</h2> <br>
-            <p data-aos="fade-up" style="text-align: justify;">A ET-Costs é um projeto de software criado pela 
-              Marsoft com o objetivo de oferecer aos seus utilizadores um controlo do orçamento familiar. 
-              Este projeto é open source, o que significa que é completamente livre de custos.
-            </p>
-            <p data-aos="fade-up" style="text-align: justify;">
-              A Marsoft reuniu esforços para apresentar um produto que visa colmatar a falta de investimento 
-              na área da gestão orçamental pessoal. Uma pesquisa prévia pelos sites da especialidade 
-              foi o suficiente para se perceber que, apesar de já existirem algumas soluções, todas elas são
-              pagas. A ET-Costs vai permitir-lhe gerir o seu orçamento de forma gratuita.</p>
-
+          <div class="why-us col-lg-6 justify-content-center">
+            <div class="row">
+                <div class="icon-boxes d-flex flex-column justify-content-center">
+                  <div class="row">
+                      <div class="icon-box">
+                        <div class="section-title">
+                          <h2>Sobre a ET-Costs</h2>
+                          <div >
+                            <p style="text-align: justify;">A ET-Costs é um projeto de software criado pela 
+                              Marsoft com o objetivo de oferecer aos seus utilizadores um controlo do orçamento familiar. 
+                              Este projeto é open source, o que significa que é completamente livre de custos.
+                            </p>
+                            <p style="text-align: justify;">
+                              A Marsoft reuniu esforços para apresentar um produto que visa colmatar a falta de investimento 
+                              na área da gestão orçamental pessoal. Uma pesquisa prévia pelos sites da especialidade 
+                              foi o suficiente para se perceber que, apesar de já existirem algumas soluções, todas elas são
+                              pagas. A ET-Costs vai permitir-lhe gerir o seu orçamento de forma gratuita.</p>
+                          </div>
+                        </div>
+                      </div>
+                  </div>
+                </div>
+            </div>
           </div>
         </div>
-
       </div>
-    </section>
-  </main>
+  </section>
+</main>
