--- a/src/app/public/faq/faq.component.html
+++ b/src/app/public/faq/faq.component.html
@@ -3,7 +3,7 @@
         <div class="container">
   
           <div class="section-title">
-            <h2 style="color: #3366ff">F.A.Q</h2>
+            <h2 class="faq-title"> F.A.Q's </h2>
             <p style="text-align: justify;">Eis a resposta a algumas perguntas pertinentes, 
               que os utilizadores da aplicação ET-Costs possam colocar.</p>
           </div>
