--- a/src/app/public/public.component.css
+++ b/src/app/public/public.component.css
@@ -20,35 +20,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------------------------------------------------
-# Top Bar
---------------------------------------------------------------*/
-#topbar {
-  background: #39312f;
-  font-size: 14px;
-  padding: 0;
-  color: rgba(255, 255, 255, 0.8);
-  /* top: 0;
-  position: fixed; 
-  width: 100%;  */
-}
-
-#topbar .cta a {
-  color: #fff;
-  background: #3366ff;
-  border-color: #3366ff;
-  padding: 8px 20px;
-  display: inline-block;
-  margin-left:900px; 
-  margin-right:0;
-  
-}
-
-#topbar .cta a:hover {
-  background: #99ccff;
-  border-color: #99ccff;
-}
-
-/*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
 #header {
@@ -57,10 +28,10 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 997;
   transition: all 0.5s;
   padding: 10px 0;
-  background: #fff;
-
-  /* position: fixed;
-  width: 100%; */
+  background: #39312f;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 #header.header-scrolled {
@@ -77,7 +48,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo h1 a, #header .logo h1 a:hover {
-  color: #635551;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -91,6 +62,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 80px;
   z-index: 3;
 }
+
 
 /*--------------------------------------------------------------
 # Navigation Menu
@@ -110,7 +82,7 @@ h1, h2, h3, h4, h5, h6 {
 .nav-menu a {
   display: block;
   position: relative;
-  color: #635551;
+  color: #fff;
   padding: 11px 15px;
   transition: 0.3s;
   font-size: 16px;
