--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -1,30 +1,19 @@
-<!-- ======= Top Bar ======= -->
-<section id="topbar" class="d-none d-lg-block">
-  <div class="container d-flex">
-    <div class="cta mr-auto">
-      <a routerLink="/login" class="btn btn-info dropdown-toggle">Entrar <span class="caret"></span></a>
-      <!-- <a routerLink="/criar-conta" class="btn btn-info">Criar Conta</a> -->
-      <ul class="dropdown-menu">
-        <li><a style="cursor: pointer;">Login</a></li>
-        <li><a style="cursor: pointer;">Criar Conta</a></li>
-    </ul>
-    </div>
-  </div>
-</section>
-<!-- ======= End Top Bar ======= -->
-
 <!-- ======= Header ======= -->
 <header id="header">
   <div class="container d-flex">
     <div class="logo mr-auto">
       <h1 class="text-light"><a routerLink="/principal" style="cursor: pointer;"><span>ET-COSTS</span></a></h1>
     </div>
-    <nav class="nav-menu d-none d-lg-block">
+    <nav class="nav-menu d-lg-block">
       <ul>
         <li routerLinkActive="active"><a routerLink="/principal" style="cursor: pointer;">Principal</a></li>
         <li routerLinkActive="active"><a routerLink="/sobre" style="cursor: pointer;">Sobre nós</a></li>
         <li routerLinkActive="active"><a routerLink="/servicos" style="cursor: pointer;">Serviços</a></li>
         <li routerLinkActive="active"><a routerLink="/faq" style="cursor: pointer;">FAQs</a></li>
+        <li><a> </a></li>
+        <li><a routerLink="/login" class="btn btn-primary">Entrar </a></li>
+        <li><a> </a></li>
+        <li><a routerLink="/criar-conta" class="btn btn-primary">Criar Conta </a></li>
       </ul>
     </nav>
   </div>
